<resources>
    <string name="app_name">Block Medic</string>
    <string name="txt_login">Login</string>
    <string name="txt_Email">Email</string>
    <string name="txt_Password">Password</string>
    <string name="txt_SignUp">Create Account</string>
    <string name="txt_or">or</string>
    <string name="txt_copyright">Copyright @Block Medic 2022</string>
    <string name="txt_Name">Name</string>
    <string name="txt_CnfPassword">Confirm Password</string>
    <string name="txt_ContactNo">Contact No</string>
    <string name="ad_button_cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
